IaC/xpipe-cloud/pipelines-v1-prc-orchestrator/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-v1-prc-orchestrator
  name: pipelines-v1-prc-orchestrator
  namespace: xpipe-cloud
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pipelines-v1-prc-orchestrator
  sessionAffinity: None
  type: ClusterIP
