IaC/xpipe-cloud/pipelines-v1-prc-orchestrator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelines-v1-prc-orchestrator
  namespace: xpipe-cloud
  labels:
    app: pipelines-v1-prc-orchestrator
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: orchestrator-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: pipelines-v1-prc-orchestrator
              port:
                number: 8080
  tls:
  - hosts:
    - orchestrator-xpipe.sindria.org
    secretName: tls-sindriaorg
